--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,13 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "rules": {
+    "react/no-unescaped-entities": "off",
+    "@typescript-eslint/quotes": "off",
+    "quotes": [false],
+    "avoidEscape": false,
+    "allowTemplateLiterals": false,
+    "no-useless-escape": false
+  }
 }
